Table message_reaction {
  id int
  reaction_id int [ref: > reaction.id]
  message_id int [ref: > message.id]
}

Table message_file {
  id int
  file_id int [ref: > file.id]
  message_id int [ref: > message.id]
}

Table message {
  id int [pk, increment]
  created_at timestamptz
  updated_at timestamptz
  deleted_at timestamptz
  sender_id int [ref: > member.id]
  body varchar
  channel_id int [ref: > channel.id]
  pinned boolean
  reply_to int [ref: > message.id]
  parent_id int [ref: > message.id]
}


